2008-01-08	Guido Diepen	<guido@guidodiepen.nl>

	* Minor bugfix, add quotes around path and files to 
	  cope with spaces within them

2008-01-08	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented Minimize-to-tray. Application must be quit
	  through Quit button, not through closing window
	* Implemented About dialog
	* Implemented handling of locked WM5 devices
	* Implemented handling of locked WM6 devices
	* Implemented more information on sysinfo screen
	* Did a bit of code-cleanup (more of this is needed)

2008-01-03	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented a Periodic Timer, that will keep updating the
	  PhoneCommunicator object and notify any observers in case
	  something gets updated in the model
	* Implemented customEvent for updating the GUI outside of the
	  GUI thread.
	* Implemented initial progress report on copying CAB file to
	  device (console based for now)

2007-12-30	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented use of tray icon. Currently only showing connection
	  status by means of the icon color. Will be minimize-to-tray
	* Implemented message balloons indicating connection status change
	* Implemented the possibility of installing CAB files through 
	  the application
	* Important note is that almost none to none checking is done!!
	  This program is still in heavy development
	* Added some new items to TODO

2007-12-29	Guido Diepen	<guido@jcwodan.nl>

	* Finished updating directory structure, program will start
	  again if fetched from SVN

2007-12-28	Guido Diepen	<guido@jcwodan.nl>

	* SynCE-KDM project renamed to SynCE-KPM. The problem is
	  that the KDM part could easily be confused with the 
	  KDE Desktop Manager. The name is now
	  SynCE KDE PDA Manager  (SynCE-KPM)
	* Changes in directory structure to make packaging easier later on

2007-12-20	Guido Diepen	<guido@jcwodan.nl>

	* SynCE-KDM now makes use of DBus to get information about 
	  connected phone. Furthermore the DBus information is also